--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     box-sizing: border-box;
 }
 body{
-    background: #080808;
+    background: #080808; /*website background color*/
     color: #fff;     /* text color*/
+}
+#header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/background.png.jpg);
+    background-size: cover;
+    background-position: center;
 }
